--- a/Example/example.tex
+++ b/Example/example.tex
@@ -48,6 +48,10 @@
 	%可选参数：
 	%pagenum=yes/no/true/false 目录是否显示页码，默认为false
 	%toc in toc=yes/no/true/false 目录中是否有目录及其页码，默认为false
+	%section indent=0em 目录第一级的缩进，默认是0em
+	%subsection indent=1.5em 目录第二级的缩进，默认是1.5em
+	%subsubsection indent=3.8em 目录第三级的缩进，默认是3.8em
+	%indent=normal/noindent/sameforsubandsubsub 快速缩进设置，具体见文档
 	%请注意在合适的位置放置\pagenumbering{numstyle}使用新的页码
 	\tableofcontents
 	
