--- a/Example/example.tex
+++ b/Example/example.tex
@@ -78,7 +78,7 @@
 	
 	{\songti \bfseries \itshape 宋体粗斜体}
 	
-	请注意，使用加粗和斜体时，请与字体名称一同使用，否则会自动将粗体匹配为黑体，斜体比配为楷体，就像下面这样
+	请注意，使用加粗和斜体时，请与字体名称一同使用，否则会自动将粗体匹配为黑体，斜体匹配为楷体，就像下面这样
 	
 	{正常显示宋体}
 	
