--- a/Example/example.tex
+++ b/Example/example.tex
@@ -20,9 +20,9 @@
 	
 	%生成声明与授权书页 \statement[可选参数]
 	%可选参数：
-	%encryption=yes/no/true/false/empty 是否保密，yes/true为保密；no/false为不保密，empty为不填，默认为empty
+	%confidentiality=yes/no/true/false/empty 是否保密，yes/true为保密；no/false为不保密，empty为不填，默认为empty
 	%year=5 保密年数，默认为空
-	\statement
+	\statement[confidentiality=no]
 	
 	\clearpage %结束上一页
 	\pagenumbering{Roman} %摘要页码为大写罗马数字
