Finish new instruction and write makeRelease.bat

--- a/Example/example.tex
+++ b/Example/example.tex
@@ -22,7 +22,7 @@
 	%可选参数：
 	%confidentiality=yes/no/true/false/empty 是否保密，yes/true为保密；no/false为不保密，empty为不填，默认为empty
 	%year=5 保密年数，默认为空
-	\statement[confidentiality=no]
+	\statement
 	
 	\clearpage %结束上一页
 	\pagenumbering{Roman} %摘要页码为大写罗马数字
@@ -149,7 +149,7 @@
 			2&16&158&45\\
 			3&14&162&48\\
 			4&15&163&50\\
-			\cmidrule{2-4}
+			\cmidrule{2-4} %添加2-4列的中线
 			平均&15&159.75&46.25\\
 			\bottomrule
 		\end{tabularx}
