--- a/Instruction/HGP.tex
+++ b/Instruction/HGP.tex
@@ -4,6 +4,7 @@
 \hypersetup{colorlinks=true} 
 \usepackage{enumitem}
 \usepackage{xltxtra}
+\usepackage{footmisc}
 \begin{document}
    \DocInput{HGP.dtx}
 \end{document}
