--- a/Example/example.tex
+++ b/Example/example.tex
@@ -1,4 +1,4 @@
-\documentclass{HustGraduPaper}
+\documentclass[supercite]{HustGraduPaper}
 %进行个人信息设置
 \title{论文题目} %论文题目
 \author{作者姓名} %作者姓名
@@ -91,6 +91,8 @@
 	\section{新的大节}
 	新的大节会自动出现在新的一页上
 	\section{引用参考文献}
+	%这是一个引用的范例\textsuperscript{\cite[abc]{Stone_1998}}；
+	
 	这是一个引用的范例\cite{Stone_1998}；
 	
 	这样可以添加一个不标注的引用\nocite{9787508342894}
