--- a/Instruction/HGP.tex
+++ b/Instruction/HGP.tex
@@ -1,7 +1,7 @@
 \documentclass{ltxdoc}
 \usepackage[UTF8,sub3section]{ctex}
 \RequirePackage{hyperref}
-\hypersetup{colorlinks=true} 
+\hypersetup{colorlinks=true,pdfstartview=FitH} 
 \usepackage{enumitem}
 \usepackage{xltxtra}
 \usepackage{footmisc}
