--- a/Instruction/HGP.dtx
+++ b/Instruction/HGP.dtx
@@ -42,7 +42,7 @@
 % \par 和一般的样式一样，本样式需要使用指令|\documentclass|来引入样式，
 % |\documentclass|的使用如下
 \begin{verbatim}
-\documentclass[样式选项]{HustGraduPaper}
+\documentclass[<样式选项>]{HustGraduPaper}
 \end{verbatim}
 % 其中样式选项可以包含如下下内容：
 % 
@@ -70,13 +70,13 @@
 % \par 标题页面包括校名、论文题目和其他个人信息。使用方法：首先，需要在引言中插入进行个
 % 人信息设置如下：
 \begin{verbatim}
-\title{论文题目} %论文题目
-\author{作者姓名} %作者姓名
-\date{\today} %日期
-\school{院系名称} %院系名称
-\classnum{专业班级} %专业班级
-\stunum {U201300000} %学号
-\instructor{指导教师姓名} %指导教师姓名
+\title{<论文题目>}
+\author{<作者姓名>}
+\date{<日期>}
+\school{<院系名称>}
+\classnum{<专业班级>}
+\stunum {<学号>}
+\instructor{<指导教师姓名>}
 \end{verbatim}
 % \par\noindent\DescribeMacro{\title} 存储论文题目，与\LaTeX 系统本身定义相同。
 % \par\noindent\DescribeMacro{\author} 存储论文作者姓名，与\LaTeX 系统本身定义相同。
@@ -85,16 +85,16 @@
 % \par\noindent\DescribeMacro{\classnum} 存储论文作者专业班级。
 % \par\noindent\DescribeMacro{\stunum} 存储论文作者学号。
 % \par\noindent\DescribeMacro{\instructor} 存储论文作者导师姓名。
-% \\\par\DescribeMacro{\maketitle} 之后，在正文中使用命令|\maketitle[可选参数]|生成标题页面。 标题页面可以添加两个可选参数，可选参数间使用英文逗号分割，可选参数分别是：
+% \\\par\DescribeMacro{\maketitle} 之后，在正文中使用命令|\maketitle[<可选参数>]|生成标题页面。 标题页面可以添加两个可选参数，可选参数间使用英文逗号分割，可选参数分别是：
 % \DescribeMacro{logo color} |logo color=green/black|表示的是华中科技大学字样的颜色，默认是绿色；
 % \DescribeMacro{line length} |line length=12em|表示的是填写信息位置（即填写姓名、班级、学号等的位置）的横线长度，默认是12em。
-% \par 在之前的版本中，本模板还使用了另一个版本的|\maketitle[12em]|命令。该命令包含一个可选参数，用于设置填写信息位置（即填写姓名、班级、学号等的位置）的横线长度，默认是12em。该命令仍然被支持
+% \par 在之前的版本中，本模板还使用了另一个版本的|\maketitle[<横线长度>]|命令。该命令包含一个可选参数，用于设置填写信息位置（即填写姓名、班级、学号等的位置）的横线长度，默认是12em。该命令仍然被支持。
 % 
 % \subsection{声明与授权页}
-% 该页面包含学术声明内容和授权使用选项，本页主要内容无需手动更改。使用方法：在正文中使用命令\DescribeMacro{\statement}|\statement[可选参数]|生成授权页面。声明页面包含两个可选参数，可选参数之间使用英文逗号分割，可选参数分别是:
+% 该页面包含学术声明内容和授权使用选项，本页主要内容无需手动更改。使用方法：在正文中使用命令\DescribeMacro{\statement}|\statement[<可选参数>]|生成授权页面。声明页面包含两个可选参数，可选参数之间使用英文逗号分割，可选参数分别是:
 % \DescribeMacro{confidentiality} |confidentiality=yes/no/true/false/empty|表示该文章是否保密，其中yes/true表示保密；no/false表示不保密；empty表示不填写，默认为empty。
 % \DescribeMacro{year} |year=5|表示该文章保密年数，默认为空白。
-% \par 在之前版本中，还使用了\DescribeMacro{\makestatement}|\makestatement[保密年数]{empty/true/false}|命令，该命令包含一个可选参数和一个必填参数，用于设置勾选保密或不保密。其中：empty为不勾选；true为保密，如选此项请填写保密年数；false为不保密。该命令仍然被支持。
+% \par 在之前版本中，还使用了\DescribeMacro{\makestatement}|\makestatement[<保密年数>]{<empty/true/false>}|命令，该命令包含一个可选参数和一个必填参数，用于设置勾选保密或不保密。其中：empty为不勾选；true为保密，如选此项请填写保密年数；false为不保密。该命令仍然被支持。
 % 
 % \subsection{中英文摘要环境}
 % \par 本模板设置了两个摘要环境，分别是针对中英文摘要。使用方法：对于中文摘要环境，这样使用\DescribeEnv{cnabstract}
@@ -112,14 +112,14 @@
 % 请注意英文关键词使用{\bfseries 英文分号+一个空格}进行分割。
 % 
 % \subsection{目录}\label{subsec:toc}
-% 根据官方样式，目录包含中英文摘要、正文、致谢、参考文献和附录。本模板已经将上述内容加入到目录中，无需手动设置。使用方法：在正文中使用命令\DescribeMacro{\tableofcontents}|\tableofcontents[可选参数]|生成目录。目录包含6个可选参数，可选参数之间使用英文逗号分隔，可选参数分别是：
+% 根据官方样式，目录包含中英文摘要、正文、致谢、参考文献和附录。本模板已经将上述内容加入到目录中，无需手动设置。使用方法：在正文中使用命令\DescribeMacro{\tableofcontents}|\tableofcontents[<可选参数>]|生成目录。目录包含6个可选参数，可选参数之间使用英文逗号分隔，可选参数分别是：
 % \DescribeMacro{pagenum} |pagenum=yes/no/true/false|表示目录页面是否显示页码，其中yes/true为显示页码no/false为不显示页码，默认不显示。
 % \DescribeMacro{toc in toc}|toc in toc=yes/no/true/false|表示是否将目录本身加入到目录中，默认不加入。请注意，即使设置不显示页码，设置在目录中显示目录的时候仍然会在目录中显示被隐藏的页码。
 % \DescribeMacro{section indent}|section indent=0em|表示目录第一级的缩进量，默认为0em。
 % \DescribeMacro{subsection indent}|subsection indent=1.5em|表示目录第二级缩进，默认为1.5em。
 % \DescribeMacro{subsubsection indent}|subsubsection indent=3.8em|表示目录第三级缩进，默认3.8em。
-% \DescribeMacro{indent}|indent=normal/noindent/sameforsubandsubsub|用于快速设定缩进，其中normal使用默认缩进，即第一级为0em，第二级为1.5em，第三级为3.8em；noindent为三级目录皆无缩进；sameforsubandsubsub使第二级和第三级缩进相同，都为1.5em，此时第一级仍为0em。
-% \par 在之前的版本中，还使用了\DescribeMacro{\maketoc}|\maketoc[nopagenum/pagenum/pagenumtoc]|命令，该命令包含一个可选参数，其中：nopagenum指目录没有页码（默认值）；pagenum指目录有页码；pagenumtoc指目录有页码，且目录两字出现在目录中。该命令仍然被支持。
+% \DescribeMacro{indent}|indent=normal/noindent/sameforsubandsubsub|用于快速设定缩进，其中|normal|使用默认缩进，即第一级为0em，第二级为1.5em，第三级为3.8em；|noindent|为三级目录皆无缩进；|sameforsubandsubsub|使第二级和第三级缩进相同，都为1.5em，此时第一级仍为0em。
+% \par 在之前的版本中，还使用了\DescribeMacro{\maketoc}|\maketoc[<nopagenum/pagenum/pagenumtoc>]|命令，该命令包含一个可选参数，其中：|nopagenum|指目录没有页码（默认值）；|pagenum|指目录有页码；|pagenumtoc|指目录有页码，且目录两字出现在目录中。该命令仍然被支持。
 % \par 请注意本模板不会自动设置页码格式，具体页码设置方法，请参考“{\itshape ~\nameref{subsec:pagenum}}”。
 % 
 % \subsection{正文}
@@ -138,7 +138,7 @@
 % \par 本模板为了使用了南京大学胡海星的《符合国家标准《GB/T 7714-2005 文后参考文献著录规则》的BibTeX样式文件》，虽然官方模板给出的样式与国标并不完全一致，但两者样式基本相同，故采用该样式，其bib文件具体标签说明请参照他写的\href{https://raw.github.com/Haixing-Hu/nju-thesis/master/manual/njuthesis-manual.pdf}{使用手册}\cite{nanda}，考虑其内容较多，不在此列举。
 % \par 文献数据库可以手工逐条录入，也可以从互联网上直接下载现成的文献数据库，很多电子期刊数据库网站会提供相应的\BibTeX 数据库文件或者\BibTeX 条目导出，Google\textsuperscript{\textregistered}  Scholar也免费提供此服务。\cite[\S 3.3]{9787121202087}这对于英文文献十分有效，部分中文期刊也有这样的服务。
 % \par 如果希望手工录入，推荐安装JabRef管理参考文献，该系统可以直接搜索论文的DOI编号、书目的ISBN编号，甚至论文的名称，从而直接获得其相关信息，极大地方便了参考文献的录入。
-% \par 若要在本模板中使用参考文献，请这样使用：首先在文章末尾参考文献的地方使用\DescribeMacro{\bibliography}|\bibliography{bib file name}|，Bib文件名中不需要加扩展名。之后可以通过命令\DescribeMacro{\cite}|\cite{bib id}|引用一个参考文献，被引用的参考文献会自动出现在文章末尾的参考文献中。也可以使用命令\DescribeMacro{\nocite}|\nocite{bib id}|隐式引用一个参考文献，这样引用不会在文中标出参考文献号。当然如果你使用的是自己录入的Bib文件，你也可以通过命令|\nocite{*}|直接将所有Bib文件中的参考文献列出。
+% \par 若要在本模板中使用参考文献，请这样使用：首先在文章末尾参考文献的地方使用\DescribeMacro{\bibliography}|\bibliography{<bib文件名>}|，Bib文件名中不需要加扩展名。之后可以通过命令\DescribeMacro{\cite}|\cite{<bib id>}|引用一个参考文献，被引用的参考文献会自动出现在文章末尾的参考文献中。也可以使用命令\DescribeMacro{\nocite}|\nocite{<bib id>}|隐式引用一个参考文献，这样引用不会在文中标出参考文献号。当然如果你使用的是自己录入的Bib文件，你也可以通过命令|\nocite{*}|直接将所有Bib文件中的参考文献列出。
 % 
 % \subsection{附录}
 % \par 本附录使用了Appendix宏包，附录使用首先需要开启附录环境，之后可以用Section、Subsection、Subsubsection来构建附录的具体内容。附录的三级标签会在目录中显示，且一级标签会添加上附录二字。理论上可以在文章任意位置加入附录，但是推荐将所有附录放在文末。具体使用方式如下：\DescribeEnv{appendices}
@@ -155,6 +155,9 @@
 % \par 本模板使用了xeCJK宏包带有的伪加粗和伪斜体功能，因此可以在不存在对应粗体或斜体的情况下使用粗体和斜体效果。
 % \par 如果需要使用粗体，请将同时使用字体命令和\DescribeMacro{\bfseries}|\bfseries|命令，比如|{\songti \bfseries 宋体粗体}|可以产生宋体粗体；如果需要使用斜体，请同时使用字体命令和\DescribeMacro{\itshape}|\itshape|命令，比如|{\songti \itshape 宋体斜体}|可以产生宋体斜体；如果需要使用粗斜体，请同时使用字体命令、|\bfseries|命令和|\itshape|命令，比如|{\songti \bfseries \itshape 宋体粗斜体}|可以产生宋体粗斜体。
 % \par 请注意，在正文中如果单独使用|\bfseries|或者|\itshape|会将字体映射为黑体和楷体，并不会将宋体加粗或者斜体。
+% 
+% \subsection{交叉引用}
+% 本模板重写了章节、段落、公式和图表的\DescribeMacro{\autoref}|\autoref|命令使之格式美观且符合一般引用方法，因此推荐使用该命令对章节、段落、公式和图表进行引用。使用方法：在引用之前需要在对应的位置使用\DescribeMacro{\label}|\label{<引用标签>}|添加一个新的标签，然后使用|\autoref{<引用标签>}|引用该标签所在的章节、段落、公式和图表。
 % 
 % \subsection{图片环境}
 % \par 本模板保留了原来的图片环境|figure|的同时，添加了一个\DescribeEnv{generalfig}|generalfig|环境，方便添加居中的，带有标题的图片。其使用方法如下：
