--- a/Release/Example/example.tex
+++ b/Release/Example/example.tex
@@ -67,7 +67,7 @@
 	\subsection{第一小节}
 	\subsubsection{第一小小节}
 	\subsubsection{第二小小节}
-	\paragraph{段落}这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落
+	\paragraph{段落}\label{para:para}这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落
 	\subparagraph{小段落}只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落
 	\subsection{第二小节}
 	本模板已经引入伪加粗和伪斜体，这样就不需要对应的粗体和斜体字体也能生成需要的效果，就像下面这样
@@ -90,21 +90,27 @@
 	这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字
 	\section{新的大节}
 	新的大节会自动出现在新的一页上
-	\section{引用参考文献}
-	%这是一个引用的范例\textsuperscript{\cite[abc]{Stone_1998}}；
+	\section{参考文献和交叉引用}
+	\subsection{参考文献}
+	这是一个参考文献引用的范例\cite{Stone_1998}；
 	
-	这是一个引用的范例\cite{Stone_1998}；
-	
-	这样可以添加一个不标注的引用\nocite{9787508342894}
+	这样可以添加一个不标注的参考文献引用\nocite{9787508342894}
 	
 	这样可以添加所有bib文件中的参考文献\nocite{*}
+	
+	\subsection{交叉引用}\label{subsec:crossref}
+	本模板已经重写了hyperref宏包的\verb|\autoref|命令，方便引用章节、公式和图表。
+	
+	比如说\autoref{subsec:crossref}就引用了本章节，\autoref{para:para}引用了之前的一个段落。
+	
+	
 	
 	\section{公式这么用}
 	在文中引用公式可以这么写：$a^2+b^2=c^2$这是勾股定理，他还可以表示为$c=\sqrt{a^2+b^2}$，还可以让公式单独一段并且加上编号
 	\begin{equation}
 	\sin^2{\theta}+\cos^2{\theta}=1 \label{eq:pingfanghe}
 	\end{equation}
-	还可以通过添加标签在正文中引用公式，如等式~\eqref{eq:pingfanghe}或者\autoref{eq:pingfanghe}。我们还可以轻松打出一个矩阵
+	还可以通过添加标签在正文中引用公式，如等式~\eqref{eq:pingfanghe}~或者\autoref{eq:pingfanghe}。我们还可以轻松打出一个矩阵
 	\begin{equation}
 	\bm{A}=\begin{bmatrix}
 	1&2&3&4\\
@@ -157,7 +163,7 @@
 		\end{tabularx}
 	\end{generaltab}
 	
-	当然你也可以引用表格，就像这样：\autoref{tab:heightweight}
+	当然你也可以引用表格，就像这样：\autoref{tab:heightweight}。
 	
 	\section{列表的使用}
 	这是一个计数的列表
